# PhaeroCopilot

./: Cargo.toml
src/: main.rs
