[package]
name = "PhaeroPredict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.11"
rdev = "0.5.3"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["stream"] }
serde_json = "1.0"
futures-util = "0.3.3"
once_cell = "1.8.0"
arboard = "3.4.0"
